# docker_image_pusher

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  PROJECT_STRUCTURE.md  README.md  all-images.txt  browser_deleter.py  cli.py  images.txt  images.yaml  pyproject.toml
.github/workflows/: docker.yaml
data/: images-beijing.txt  images.txt
docs/: PAGINATION_GUIDE.md  PLAYWRIGHT_RECORDING.md  README.md  浏览器删除方案.md
scripts/: delete-with-debug.sh  delete_via_browser.py  quick_record.sh  record_delete.py  recorded_delete.py  selector_helper.py
src/: main.py
src/browser/: deleter.py  selectors.py  state.py
src/commands/: delete_api.py  list.py  push.py
src/commands/delete_browser/: batch.py  login.py  regex.py  single.py
src/core/: config.py  exceptions.py
src/image/: pusher.py
src/registry/: auth.py  client.py  tags.py
src/utils/: logging.py
src/winwin_image_mirror/: main.py
src/winwin_image_mirror/browser/: deleter.py  selectors.py  state.py
src/winwin_image_mirror/commands/: delete.py  delete_api.py  list.py  push.py
src/winwin_image_mirror/commands/delete_browser/: batch.py  login.py  regex.py  single.py
src/winwin_image_mirror/core/: config.py
src/winwin_image_mirror/image/: parser.py  pusher.py
src/winwin_image_mirror/registry/: auth.py  tags.py
tests/: conftest.py  test.py  test_browser_delete.py  test_config.py  test_data_file.py  test_image_parser.py  test_registry_client.py
